tests/sema/fail/v19_fail_u32_removed.ep
# COMPILE_FAIL: unknown type u32

fun main(): void {
    let x: u32 = 0
}
